[gd_scene load_steps=6 format=3 uid="uid://cnqfl2e6a1il2"]

[ext_resource type="Script" path="res://Code/Player.gd" id="1_em4x2"]
[ext_resource type="Texture2D" uid="uid://dgrmkak6bykgx" path="res://Sprites/icon.svg" id="2_fun2b"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0o6h2"]
size = Vector2(131, 128)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s4qfx"]
size = Vector2(131, 128)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cn0t0"]
size = Vector2(50, 130)

[node name="Player" type="CharacterBody2D"]
collision_mask = 6
platform_floor_layers = 4294967043
script = ExtResource("1_em4x2")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_fun2b")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2, 0)
shape = SubResource("RectangleShape2D_0o6h2")

[node name="Dash" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="CanDash" type="Timer" parent="."]
one_shot = true

[node name="Body" type="Area2D" parent="." groups=["player_body"]]
visible = false
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body"]
position = Vector2(-1.5, 0)
shape = SubResource("RectangleShape2D_s4qfx")

[node name="Attack_Defense" type="Area2D" parent="." groups=["Attack"]]
collision_layer = 9
collision_mask = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attack_Defense"]
position = Vector2(-110, 0)
shape = SubResource("RectangleShape2D_cn0t0")
debug_color = Color(0.707418, 0.477769, 0.276075, 0.42)

[node name="atk_cool" type="Timer" parent="."]

[connection signal="timeout" from="Dash" to="." method="_on_dash_timeout"]
[connection signal="timeout" from="CanDash" to="." method="_on_can_dash_timeout"]
[connection signal="area_entered" from="Body" to="." method="_on_body_area_entered"]
[connection signal="area_exited" from="Body" to="." method="_on_body_area_exited"]
[connection signal="body_entered" from="Body" to="." method="_on_body_body_entered"]
[connection signal="body_exited" from="Body" to="." method="_on_body_body_exited"]
[connection signal="area_entered" from="Attack_Defense" to="." method="_on_attack_defense_area_entered"]
[connection signal="area_exited" from="Attack_Defense" to="." method="_on_attack_defense_area_exited"]
[connection signal="timeout" from="atk_cool" to="." method="_on_atk_cool_timeout"]
